@startuml
' Classes
class Computer {
  -cpu: String
  -ramSizeGB: int
  -storageType: String
  -storageSizeGB: int
  -gpu: String
  -hasWiFi: boolean
  -hasBluetooth: boolean
  -operatingSystem: String
  -weightKg: double
  +Computer(cpu: String, ramSizeGB: int, storageType: String, storageSizeGB: int, gpu: String, hasWiFi: boolean, hasBluetooth: boolean, operatingSystem: String, weightKg: double)
  +getCpu(): String
  +getRamSizeGB(): int
  +getStorageType(): String
  +getStorageSizeGB(): int
  +getGpu(): String
  +hasWiFi(): boolean
  +hasBluetooth(): boolean
  +getOperatingSystem(): String
  +getWeightKg(): double
  +toString(): String
}

class ComputerBuilder {
  +setCpu(cpu: String): ComputerBuilder
  +setRamSizeGB(ramSizeGB: int): ComputerBuilder
  +setStorageType(storageType: String): ComputerBuilder
  +setStorageSizeGB(storageSizeGB: int): ComputerBuilder
  +setGpu(gpu: String): ComputerBuilder
  +setHasWiFi(hasWiFi: boolean): ComputerBuilder
  +setHasBluetooth(hasBluetooth: boolean): ComputerBuilder
  +setOperatingSystem(operatingSystem: String): ComputerBuilder
  +setWeightKg(weightKg: double): ComputerBuilder
  +build(): Computer
}

class GamingComputerBuilder {
  -cpu: String
  -ramSizeGB: int
  -storageType: String
  -storageSizeGB: int
  -gpu: String
  -hasWiFi: boolean
  -hasBluetooth: boolean
  -operatingSystem: String
  -weightKg: double
  +GamingComputerBuilder()
  +reset()
  +setCpu(cpu: String): ComputerBuilder
  +setRamSizeGB(ramSizeGB: int): ComputerBuilder
  +setStorageType(storageType: String): ComputerBuilder
  +setStorageSizeGB(storageSizeGB: int): ComputerBuilder
  +setGpu(gpu: String): ComputerBuilder
  +setHasWiFi(hasWiFi: boolean): ComputerBuilder
  +setHasBluetooth(hasBluetooth: boolean): ComputerBuilder
  +setOperatingSystem(operatingSystem: String): ComputerBuilder
  +setWeightKg(weightKg: double): ComputerBuilder
  +build(): Computer
}

class OfficeComputerBuilder {
  -cpu: String
  -ramSizeGB: int
  -storageType: String
  -storageSizeGB: int
  -gpu: String
  -hasWiFi: boolean
  -hasBluetooth: boolean
  -operatingSystem: String
  -weightKg: double
  +OfficeComputerBuilder()
  +reset()
  +setCpu(cpu: String): ComputerBuilder
  +setRamSizeGB(ramSizeGB: int): ComputerBuilder
  +setStorageType(storageType: String): ComputerBuilder
  +setStorageSizeGB(storageSizeGB: int): ComputerBuilder
  +setGpu(gpu: String): ComputerBuilder
  +setHasWiFi(hasWiFi: boolean): ComputerBuilder
  +setHasBluetooth(hasBluetooth: boolean): ComputerBuilder
  +setOperatingSystem(operatingSystem: String): ComputerBuilder
  +setWeightKg(weightKg: double): ComputerBuilder
  +build(): Computer
}

class ComputerDirector {
  +ComputerDirector()
  +buildHighEndGamingComputer(builder: ComputerBuilder): Computer
  +buildBudgetOfficeComputer(builder: ComputerBuilder): Computer
  +buildPortableLaptop(builder: ComputerBuilder): Computer
}

class Client {
  +main(args: String[]): void
}

' Relationships
ComputerBuilder <|-- GamingComputerBuilder
ComputerBuilder <|-- OfficeComputerBuilder
ComputerBuilder ..> Computer : uses
GamingComputerBuilder ..> Computer : creates
OfficeComputerBuilder ..> Computer : creates
ComputerDirector ..> ComputerBuilder : uses
Client ..> GamingComputerBuilder : uses
Client ..> OfficeComputerBuilder : uses
Client ..> ComputerDirector : uses
Client ..> Computer : uses
@enduml